[package]
name = "rio-test"
version = "0.1.0"
authors = ["hatoo <hato2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rio = "0.9.4"
tokio = { version = "1.5.0", features = ["full"] }
tempfile = "3.1"
libc = "0.2.93"
